--- a/app/src/main/res/layout/item_pelicula.xml
+++ b/app/src/main/res/layout/item_pelicula.xml
@@ -41,42 +41,42 @@
                     android:layout_height="wrap_content"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
-                    android:text="TextView"
+                    android:text="@string/txt_titulo"
                     android:textSize="20sp" />
 
                 <TextView
                     android:id="@+id/txtAnio"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="@string/txt_anio"
                     android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/txtGenero"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="@string/txt_genero"
                     android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/txtDuracion"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="@string/txt_duracion"
                     android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/txtPresupuesto"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="@string/txt_presupuesto"
                     android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/txtCalificacion"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="@string/txt_calificacion"
                     android:textSize="12sp" />
             </LinearLayout>
         </LinearLayout>
