--- a/app/src/main/res/layout/activity_main_actor.xml
+++ b/app/src/main/res/layout/activity_main_actor.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.cmp.sqlite_proyect.MainActivity"
-
-
-    >
+    tools:context="com.cmp.sqlite_proyect.MainActivityActor">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,15 +21,15 @@
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:gravity="center"
-            android:text="PELICULAS"
+            android:text="ACTORES"
             android:textSize="26sp"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/txtviewtpc"
+            android:id="@+id/txtviewA"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Id Pelicula" />
+            android:text="Id Actor" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -42,19 +37,20 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/editId"
+                android:id="@+id/editIdAC"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="@string/hint_ID"
+                android:hint="@string/hint_IDAC"
                 android:inputType="text" />
 
             <Button
-                android:id="@+id/btnBuscar"
+                android:id="@+id/btnBuscarAC"
                 android:layout_width="146dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/btn_buscar" />
+                android:text="@string/btn_buscarAC" />
+
 
         </LinearLayout>
 
@@ -62,108 +58,94 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Titulo" />
+            android:text="Nombre completo" />
 
         <EditText
-            android:id="@+id/editTitulo"
+            android:id="@+id/editNombreAC"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/hint_titulo"
+            android:hint="@string/hint_nombreAC"
             android:inputType="text" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Año de lanzamiento" />
+            android:text="Fecha de nacimiento" />
 
         <EditText
-            android:id="@+id/editAnio"
+            android:id="@+id/editFechaAC"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/hint_anio"
-            android:inputType="number" />
+            android:hint="@string/hint_fechaAC"
+            android:inputType="text" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Genero" />
+            android:text="Nacionalidad" />
 
         <EditText
-            android:id="@+id/editGenero"
+            android:id="@+id/editNacionalidadAC"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/hint_genero"
+            android:hint="@string/hint_nacionalidadAC"
             android:inputType="text" />
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Duracion" />
+            android:text="Sexo" />
 
         <EditText
-            android:id="@+id/editDuracion"
+            android:id="@+id/editSexoAC"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/hint_duracion"
+            android:hint="@string/hint_sexoAC"
             android:inputType="text" />
 
         <TextView
             android:id="@+id/textView6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Presupuesto" />
+            android:text="Tipo de actor" />
 
         <EditText
-            android:id="@+id/editPresupuesto"
+            android:id="@+id/editTipoAC"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/hint_presupuesto"
-            android:inputType="number" />
-
-        <TextView
-            android:id="@+id/textView7"
+            android:hint="@string/hint_idtipoAC"
+            android:inputType="text" />
+        <Button
+            android:id="@+id/btnAgregarAC"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Calificacion" />
-
-        <EditText
-            android:id="@+id/editCalificacion"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/hint_calificacion"
-            android:inputType="number" />
+            android:text="@string/btn_agregarAC" />
 
         <Button
-            android:id="@+id/btnAgregar"
+            android:id="@+id/btnEditarAC"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/btn_agregar" />
+            android:text="@string/btn_editarAC" />
 
         <Button
-            android:id="@+id/btnEditar"
+            android:id="@+id/btnEliminarAC"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/btn_editar" />
+            android:text="@string/btn_eliminarAC" />
 
         <Button
-            android:id="@+id/btnEliminar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/btn_eliminar" />
-
-        <Button
-            android:id="@+id/btnMostrar"
+            android:id="@+id/btnMostrarAC"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/btn_mostrar" />
+
     </LinearLayout>
 </RelativeLayout>
