--- a/app/src/main/res/layout/item_tipo_actor.xml
+++ b/app/src/main/res/layout/item_tipo_actor.xml
@@ -25,7 +25,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
-                android:foreground="@drawable/icono1" />
+                android:foreground="@drawable/icono2" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -36,55 +36,22 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/txtTitulo"
+                    android:id="@+id/txtIdTipoActor"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
-                    android:text="@string/txt_titulo"
+                    android:text="@string/txt_Id_tipoActor"
                     android:textSize="20sp" />
 
                 <TextView
                     android:id="@+id/txtNombreTipo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/txt_Id"
+                    android:text="@string/txt_nombreActor"
                     android:textSize="12sp" />
 
-                <TextView
-                    android:id="@+id/txtAnio"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/txt_anio"
-                    android:textSize="12sp" />
 
-                <TextView
-                    android:id="@+id/txtGenero"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/txt_genero"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:id="@+id/txtDuracion"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/txt_duracion"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:id="@+id/txtPresupuesto"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/txt_presupuesto"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:id="@+id/txtCalificacion"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/txt_calificacion"
-                    android:textSize="12sp" />
 
 
             </LinearLayout>
